feat: add request helper class

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,8 @@ URL="https://www.ice.com/public-web/cds-settlement-prices/icc/single-names"
 LOG_LEVEL="INFO"
 OUTPUT_TABLE=
 INSERTER_MAX_RETRIES=2
+REQUEST_MAX_RETRIES=3
+REQUEST_BACKOFF_FACTOR=2
 MSSQL_SERVER=
 MSSQL_DATABASE=
 MSSQL_USERNAME=
