doc: update README.md

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-URL="https://www.ice.com/public-web/cds-settlement-prices/icc/single-names"
-LOG_LEVEL="INFO"
+URL=https://www.ice.com/public-web/cds-settlement-prices/icc/single-names
+LOG_LEVEL=INFO
 OUTPUT_TABLE=
 INSERTER_MAX_RETRIES=2
 REQUEST_MAX_RETRIES=3
